[project]
name = "civitai_comfy_nodes"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/civitai/civitai_comfy_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "civitai_comfy_nodes"
Icon = ""
